--- a/Project/Data Analysis/1.미세먼지/Back/first.ipynb
+++ b/Project/Data Analysis/1.미세먼지/Back/first.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,18 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<http.client.HTTPResponse at 0x20238426340>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 4
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'target_site1' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-b4b1e65802d0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 사이트에 들어가면 서버가 html,css,js등을 내려주고 브라우저는 그걸 해석(파싱)해서 화면에 띄워줌\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# 3. 접속(요청)하여 html, css, js를 다운받는다.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mres1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0murlopen\u001b[0m\u001b[1;33m(\u001b[0m \u001b[0mtarget_site1\u001b[0m \u001b[1;33m)\u001b[0m \u001b[1;31m#이 부분은 브라우저를 띄우고 주소 치고엔터쳐서 화면이 보이기 직전과 동일하다.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mres1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'target_site1' is not defined"
+     ]
     }
    ],
    "source": [
