--- a/Project/Data Analysis/1.미세먼지/Back/정제함수 보기좋게만든거.ipynb
+++ b/Project/Data Analysis/1.미세먼지/Back/정제함수 보기좋게만든거.ipynb
@@ -923,17 +923,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 235,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'PUSANFINAL' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-235-f77c4232584e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#참고 데이터프레임> html\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mPUSANFINAL\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_html\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'PUSANFINAL.html'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mjustify\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'center'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'PUSANFINAL' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "#참고 데이터프레임> 지도저장\n",
+    "#참고 데이터프레임> html\n",
     "PUSANFINAL.to_html('PUSANFINAL.html', justify='center')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -945,6 +957,7 @@
     }
    ],
    "source": [
+    "# 지도 시각화 시작\n",
     "for i in test.index:\n",
     "    print(f\"test.loc['{i}']\")"
    ]
@@ -1009,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1031,6 @@
       "text/plain": [
        "                  위도          경도\n",
        "이름                              \n",
-       "SEOUL      37.590579  126.974146\n",
        "PUSAN      35.166468  129.026607\n",
        "DEAGU      35.819914  128.544669\n",
        "INCHEON    37.449887  126.702114\n",
@@ -1036,15 +1048,36 @@
        "JE_JU      33.418029  126.573485\n",
        "SEJONG     36.559408  127.248235"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>위도</th>\n      <th>경도</th>\n    </tr>\n    <tr>\n      <th>이름</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>SEOUL</th>\n      <td>37.590579</td>\n      <td>126.974146</td>\n    </tr>\n    <tr>\n      <th>PUSAN</th>\n      <td>35.166468</td>\n      <td>129.026607</td>\n    </tr>\n    <tr>\n      <th>DEAGU</th>\n      <td>35.819914</td>\n      <td>128.544669</td>\n    </tr>\n    <tr>\n      <th>INCHEON</th>\n      <td>37.449887</td>\n      <td>126.702114</td>\n    </tr>\n    <tr>\n      <th>KWANG_JU</th>\n      <td>35.166368</td>\n      <td>126.829775</td>\n    </tr>\n    <tr>\n      <th>DAEJEON</th>\n      <td>36.333920</td>\n      <td>127.395312</td>\n    </tr>\n    <tr>\n      <th>ULSAN</th>\n      <td>35.565622</td>\n      <td>129.269744</td>\n    </tr>\n    <tr>\n      <th>KYEONG_GI</th>\n      <td>37.396892</td>\n      <td>127.496263</td>\n    </tr>\n    <tr>\n      <th>KANGONE</th>\n      <td>35.481133</td>\n      <td>128.307975</td>\n    </tr>\n    <tr>\n      <th>CHUNG_BUK</th>\n      <td>36.994500</td>\n      <td>127.670103</td>\n    </tr>\n    <tr>\n      <th>CHUNG_NAM</th>\n      <td>36.635279</td>\n      <td>126.848595</td>\n    </tr>\n    <tr>\n      <th>JEON_BUK</th>\n      <td>35.708444</td>\n      <td>127.116620</td>\n    </tr>\n    <tr>\n      <th>JEON_NAM</th>\n      <td>34.889491</td>\n      <td>126.991723</td>\n    </tr>\n    <tr>\n      <th>KYUNG_BUK</th>\n      <td>36.399811</td>\n      <td>128.839751</td>\n    </tr>\n    <tr>\n      <th>KYUNG_NAM</th>\n      <td>35.405054</td>\n      <td>128.154167</td>\n    </tr>\n    <tr>\n      <th>JE_JU</th>\n      <td>33.418029</td>\n      <td>126.573485</td>\n    </tr>\n    <tr>\n      <th>SEJONG</th>\n      <td>36.559408</td>\n      <td>127.248235</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>위도</th>\n      <th>경도</th>\n    </tr>\n    <tr>\n      <th>이름</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>PUSAN</th>\n      <td>35.166468</td>\n      <td>129.026607</td>\n    </tr>\n    <tr>\n      <th>DEAGU</th>\n      <td>35.819914</td>\n      <td>128.544669</td>\n    </tr>\n    <tr>\n      <th>INCHEON</th>\n      <td>37.449887</td>\n      <td>126.702114</td>\n    </tr>\n    <tr>\n      <th>KWANG_JU</th>\n      <td>35.166368</td>\n      <td>126.829775</td>\n    </tr>\n    <tr>\n      <th>DAEJEON</th>\n      <td>36.333920</td>\n      <td>127.395312</td>\n    </tr>\n    <tr>\n      <th>ULSAN</th>\n      <td>35.565622</td>\n      <td>129.269744</td>\n    </tr>\n    <tr>\n      <th>KYEONG_GI</th>\n      <td>37.396892</td>\n      <td>127.496263</td>\n    </tr>\n    <tr>\n      <th>KANGONE</th>\n      <td>35.481133</td>\n      <td>128.307975</td>\n    </tr>\n    <tr>\n      <th>CHUNG_BUK</th>\n      <td>36.994500</td>\n      <td>127.670103</td>\n    </tr>\n    <tr>\n      <th>CHUNG_NAM</th>\n      <td>36.635279</td>\n      <td>126.848595</td>\n    </tr>\n    <tr>\n      <th>JEON_BUK</th>\n      <td>35.708444</td>\n      <td>127.116620</td>\n    </tr>\n    <tr>\n      <th>JEON_NAM</th>\n      <td>34.889491</td>\n      <td>126.991723</td>\n    </tr>\n    <tr>\n      <th>KYUNG_BUK</th>\n      <td>36.399811</td>\n      <td>128.839751</td>\n    </tr>\n    <tr>\n      <th>KYUNG_NAM</th>\n      <td>35.405054</td>\n      <td>128.154167</td>\n    </tr>\n    <tr>\n      <th>JE_JU</th>\n      <td>33.418029</td>\n      <td>126.573485</td>\n    </tr>\n    <tr>\n      <th>SEJONG</th>\n      <td>36.559408</td>\n      <td>127.248235</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 183
+     "execution_count": 236
     }
    ],
    "source": [
-    "test"
+    "# test.drop('SEOUL', axis=0)# 인덱스 가로 삭제\n",
+    "# test.drop('위도', axis=1)# 컬럼 세로삭제\n",
+    "# #인덱스 잡힌건 어케삭제하나"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'index' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-240-f6c66139342a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'위도'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'index' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
