--- a/Project/Data Analysis/0.개인프로젝트_준비자료/0_base.ipynb
+++ b/Project/Data Analysis/0.개인프로젝트_준비자료/0_base.ipynb
@@ -40,8 +40,19 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "!pip install plotly==4.14.3"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "source": [],
+   "outputs": [],
    "metadata": {}
   },
   {
