--- a/Project/Data Analysis/0.개인프로젝트_준비자료/0_base.ipynb
+++ b/Project/Data Analysis/0.개인프로젝트_준비자료/0_base.ipynb
@@ -24,8 +24,10 @@
    "source": [
     "import pandas as pd \r\n",
     "import numpy as np\r\n",
+    "import plotly\r\n",
     "print(pd.__version__)\r\n",
-    "print(np.__version__)"
+    "print(np.__version__)\r\n",
+    "print(plotly.__version__)"
    ],
    "outputs": [
     {
