--- a/Project/Data Analysis/0.개인프로젝트_준비자료/0_base.ipynb
+++ b/Project/Data Analysis/0.개인프로젝트_준비자료/0_base.ipynb
@@ -7010,6 +7010,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "source": [
+    "import sys\r\n",
+    "from PyQt5.QtWidgets import QApplication, QWidget\r\n",
+    "\r\n",
+    "class MyApp(QWidget):\r\n",
+    "\r\n",
+    "    def __init__(self):\r\n",
+    "        super().__init__()\r\n",
+    "        self.initUI()\r\n",
+    "\r\n",
+    "    def initUI(self):\r\n",
+    "        self.setWindowTitle('Test app')\r\n",
+    "        self.move(300, 300)\r\n",
+    "        self.resize(400, 200)\r\n",
+    "        self.show()\r\n",
+    "\r\n",
+    "if __name__ == '__main__':\r\n",
+    "    app = QApplication(sys.argv)\r\n",
+    "    ex  = MyApp()\r\n",
+    "    sys.exit(app.exec_())"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SystemExit",
+     "evalue": "0",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "C:\\Users\\ad\\miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3445: UserWarning:\n",
+      "\n",
+      "To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "source": [],
    "outputs": [],
