--- a/Project/Data Analysis/0.개인프로젝트_준비자료/0_base.ipynb
+++ b/Project/Data Analysis/0.개인프로젝트_준비자료/0_base.ipynb
@@ -7010,7 +7010,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
+   "source": [
+    "import plotly.graph_objects as go\r\n",
+    "trace = go.Chart()\r\n",
+    "data = [trace]\r\n",
+    "layout = go.Layout()\r\n",
+    "fig = go.Figure(data, layout)\r\n",
+    "fig.show()"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "Error",
+     "evalue": "Session cannot generate requests",
+     "traceback": [
+      "Error: Session cannot generate requests",
+      "at w.executeCodeCell (c:\\Users\\ad\\.vscode\\extensions\\ms-toolsai.jupyter-2021.8.1054968649\\out\\client\\extension.js:90:320068)",
+      "at w.execute (c:\\Users\\ad\\.vscode\\extensions\\ms-toolsai.jupyter-2021.8.1054968649\\out\\client\\extension.js:90:319389)",
+      "at w.start (c:\\Users\\ad\\.vscode\\extensions\\ms-toolsai.jupyter-2021.8.1054968649\\out\\client\\extension.js:90:315205)",
+      "at processTicksAndRejections (internal/process/task_queues.js:93:5)",
+      "at async t.CellExecutionQueue.executeQueuedCells (c:\\Users\\ad\\.vscode\\extensions\\ms-toolsai.jupyter-2021.8.1054968649\\out\\client\\extension.js:90:329732)",
+      "at async t.CellExecutionQueue.start (c:\\Users\\ad\\.vscode\\extensions\\ms-toolsai.jupyter-2021.8.1054968649\\out\\client\\extension.js:90:329272)"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "source": [
     "import sys\r\n",
     "from PyQt5.QtWidgets import QApplication, QWidget\r\n",
@@ -7032,27 +7068,7 @@
     "    ex  = MyApp()\r\n",
     "    sys.exit(app.exec_())"
    ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "SystemExit",
-     "evalue": "0",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
-     ]
-    },
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "C:\\Users\\ad\\miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3445: UserWarning:\n",
-      "\n",
-      "To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
