--- a/Project/Data Analysis/0.개인프로젝트_준비자료/0_base.ipynb
+++ b/Project/Data Analysis/0.개인프로젝트_준비자료/0_base.ipynb
@@ -7074,7 +7074,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "import sys\r\n",
+    "from PyQt5.QtWidgets import QApplication, QWidget, QPushButton\r\n",
+    "from PyQt5.QtCore import QCoreApplication"
+   ],
    "outputs": [],
    "metadata": {}
   }
