--- a/Project/Data Analysis/0.개인프로젝트_준비자료/0_ml.ipynb
+++ b/Project/Data Analysis/0.개인프로젝트_준비자료/0_ml.ipynb
@@ -2578,6 +2578,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 177,
+   "source": [
+    "train_array = np.arange(0, 11).reshape(-1, 1)\r\n",
+    "test_array = np.arange(0, 6).reshape(-1,1)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "source": [
+    "scale = MinMaxScaler()\r\n",
+    "scaler.fit(train_array)\r\n",
+    "train_scaled = scaler.transform(train_array)\r\n",
+    "train_scaled"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[0. ],\n",
+       "       [0.1],\n",
+       "       [0.2],\n",
+       "       [0.3],\n",
+       "       [0.4],\n",
+       "       [0.5],\n",
+       "       [0.6],\n",
+       "       [0.7],\n",
+       "       [0.8],\n",
+       "       [0.9],\n",
+       "       [1. ]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 180
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "source": [
+    "scaler  = MinMaxScaler()\r\n",
+    "scaler.fit(train_array)\r\n",
+    "train_scaled = scaler.transform(train_array)\r\n",
+    "\r\n",
+    "test_scaled = scaler.transform(test_array)\r\n",
+    "test_scaled"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[0. ],\n",
+       "       [0.1],\n",
+       "       [0.2],\n",
+       "       [0.3],\n",
+       "       [0.4],\n",
+       "       [0.5]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 184
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "%tensorflow_version 1.7\r\n",
+    "import tensorflow as tf\r\n",
+    "tf.__version__"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "UsageError: Line magic function `%tensorflow_version` not found.\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "import sys \r\n",
+    "!{sys.executable} -m pip install tensorflow==1.15.0"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "ERROR: Could not find a version that satisfies the requirement tensorflow==1.15.0\n",
+      "ERROR: No matching distribution found for tensorflow==1.15.0\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "source": [],
    "outputs": [],
