--- a/Project/Data Analysis/2.애완동물/fin.ipynb
+++ b/Project/Data Analysis/2.애완동물/fin.ipynb
@@ -18,7 +18,7 @@
     "        result       = chardet라이브러리의 detect 모듈 이용 소스파일 형식 dict()형태로 반환\r\n",
     "        charenc      = dict()형태의 인코딩 방식 추출\r\n",
     "        open_source  = 판다스모듈 read_csv() 메서드 이용 및 인코딩 방식 이용하여 파일 읽기\r\n",
-    "        self.open_source1 = 명시적인덱서 사용 상세영업상태명 컬럼 '정상'인 문자열만 추출\r\n",
+    "        open_source1 = 명시적인덱서 사용 상세영업상태명 컬럼 '정상'인 문자열만 추출\r\n",
     "        \r\n",
     "        # return open_source1\r\n",
     "    \r\n",
@@ -27,10 +27,34 @@
     "        fin_source_data['구분']  = 소재지 전체주소에서 제일앞의 지명만 추출하여 새 컬럼 생성\r\n",
     "        fin_source_data.columns  = 컬럼명 재구성\r\n",
     "        fin_source_data['도로명']컬럼 결측치 0으로 대체\r\n",
+    "\r\n",
     "        # return fin_source_data\r\n",
     "    \r\n",
     "    def 비교대상 리스트 생성함수(self):\r\n",
-    "        \r\n",
+    "        addr_final = 빈 리스트 생성\r\n",
+    "        for문 i에 인덱스값, j에 fin_source_data[['도로명']]컬럼의 내용을 받는다.\r\n",
+    "            if j[0] !=0:\r\n",
+    "                addr_final.append(j[0]) \r\n",
+    "            else: \r\n",
+    "                (도로명의 결측치를 위의 함수에서 0으로 채웠음)\r\n",
+    "                도로명의 내용이 0이아니라면 == 결측이아니라면\r\n",
+    "                (명시적 인덱서 사용) 동일 행의 지번컬럼의 내용을 도로명컬럼에 복사함. \r\n",
+    "\r\n",
+    "    def 위/경도 추출 함수(self):\r\n",
+    "        addr_final = 비교대상 리스트 생성함수 리턴받음\r\n",
+    "        count      = 0\r\n",
+    "        exc        = 빈 리스트 생성\r\n",
+    "        for 비교대상 리스트 i로 받음:\r\n",
+    "            x_y          = 딕셔너리 형태로 위도=y / 경도= x 선언\r\n",
+    "            rest_api_key = 카카오api 용 rest api key 사용\r\n",
+    "            query        = i\r\n",
+    "            url          = 카카오 api url f스트링사용 마지막에 query 붙이기\r\n",
+    "            headers      = 카카오 api 형식에 맞는 헤더 및 비밀키 추가\r\n",
+    "            res          = request 모듈의 get 메서드 사용 url, header 사용 결과값 받기\r\n",
+    "            res_json     = 결과값 json 변환\r\n",
+    "            예외처리문 시작:\r\n",
+    "                i값과  fin_source_data \r\n",
+    "\r\n",
     "\r\n",
     "\r\n",
     "    "
@@ -40,29 +64,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "    def test_list(self) -> list[str]:\r\n",
-    "        self.choose_columns()\r\n",
-    "        addr_final = list()\r\n",
-    "        for i,j in self.fin_source_data[['도로명']].iterrows():\r\n",
-    "            if j[0] != 0:\r\n",
-    "                addr_final.append(j[0])\r\n",
-    "            else :\r\n",
-    "                self.fin_source_data.loc[i,\"도로명\"] = self.fin_source_data.loc[i,\"지번\"] #########\r\n",
-    "                addr_final.append(self.fin_source_data.loc[i,\"지번\"])\r\n",
-    "                # 비교대상 리스트\r\n",
-    "        \r\n",
-    "        return addr_final"
-   ],
+   "source": [],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "1"
-   ],
+   "source": [],
    "outputs": [],
    "metadata": {}
   },
@@ -83,7 +92,7 @@
     "import bokeh\r\n",
     "\r\n",
     "\r\n",
-    "\r\n",
+    "# pd.set_option('display.max_rows', None)\r\n",
     "class Veterinary :\r\n",
     "\r\n",
     "    '''\r\n",
@@ -119,87 +128,81 @@
     "        self.fin_source_data['구분'] = self.fin_source_data['소재지전체주소'].str.split(' ').str.get(0).copy()\r\n",
     "        self.fin_source_data.columns= ['병원명', '영업상태', '지번', '도로명', '위도', '경도', '지역']\r\n",
     "        self.fin_source_data['도로명'].fillna(0, inplace=True)\r\n",
+    "        self.fin_source_data['경도'] = 0\r\n",
+    "        self.fin_source_data['위도'] = 0\r\n",
     "        return self.fin_source_data\r\n",
     "\r\n",
-    "    def test_list(self) -> list[str]:\r\n",
-    "        self.choose_columns()\r\n",
-    "        addr_final = list()\r\n",
-    "        for i,j in self.fin_source_data[['도로명']].iterrows():\r\n",
-    "            if j[0] != 0:\r\n",
-    "                addr_final.append(j[0])\r\n",
-    "            else :\r\n",
-    "                self.fin_source_data.loc[i,\"도로명\"] = self.fin_source_data.loc[i,\"지번\"] #########\r\n",
-    "                addr_final.append(self.fin_source_data.loc[i,\"지번\"])\r\n",
-    "                # 비교대상 리스트\r\n",
+    "    # def test_list(self) -> list[str]:\r\n",
+    "    #     self.choose_columns()\r\n",
+    "    #     addr_final = list()\r\n",
+    "    #     for i,j in self.fin_source_data[['도로명']].iterrows():\r\n",
+    "    #         if j[0] != 0:\r\n",
+    "    #             addr_final.append(j[0])\r\n",
+    "    #         else :\r\n",
+    "    #             self.fin_source_data.loc[i,\"도로명\"] = self.fin_source_data.loc[i,\"지번\"] #########\r\n",
+    "    #             addr_final.append(self.fin_source_data.loc[i,\"지번\"])\r\n",
+    "    #             # 비교대상 리스트\r\n",
     "        \r\n",
-    "        return addr_final\r\n",
+    "    #     return addr_final\r\n",
     "\r\n",
     "    def test_list2(self) -> pd.DataFrame:\r\n",
-    "        #self.test_list()\r\n",
-    "        addr_final = self.test_list()\r\n",
-    "        count = 0\r\n",
     "        exc = list()\r\n",
-    "        for i in addr_final :\r\n",
+    "        cnt = 0\r\n",
+    "        fin_source_data = self.fin_source_data\r\n",
+    "        for u,i in enumerate(fin_source_data['도로명']):\r\n",
     "            x_y = dict(위도='y', 경도='x')\r\n",
-    "            self.rest_api_key = 'c6ead90ce93e6ff182fbb5dbbb2efb6c'\r\n",
+    "            rest_api_key = '9f10e0da92a528fe5f87d42ab8d8c197'\r\n",
+    "        #   sw = False\r\n",
+    "            if i == 0:\r\n",
+    "                i  = fin_source_data.loc[ u, \"지번\" ]\r\n",
+    "        #       sw = True\r\n",
+    "            \r\n",
+    "\r\n",
+    "\r\n",
     "            query = i\r\n",
     "            url = f\"https://dapi.kakao.com/v2/local/search/address.json?query={query}\"\r\n",
-    "            headers={'Authorization':'KakaoAK {}'.format(self.rest_api_key)}\r\n",
+    "            headers={'Authorization':'KakaoAK {}'.format(rest_api_key)}\r\n",
     "            res = requests.get(url, headers=headers)\r\n",
-    "            res_json = res.json()\r\n",
-    "            try :\r\n",
-    "                #print(f'POINT 1{i}')\r\n",
-    "                #print(f'POINT 2{self.fin_source_data.loc[ self.fin_source_data[\"도로명\"]== i, \"도로명\" ].unique()[0]}')\r\n",
-    "\r\n",
-    "                if i == self.fin_source_data.loc[ self.fin_source_data[\"도로명\"]== i, \"도로명\" ].unique()[0]:\r\n",
-    "                    for j,k in x_y.items():\r\n",
-    "                        self.fin_source_data.loc[ self.fin_source_data[\"도로명\"]== i , j ] = res_json['documents'][0]['address'][k]\r\n",
-    "                elif  i == self.fin_source_data.loc[ self.fin_source_data[\"지번\"]== i, \"지번\" ].unique()[0]:\r\n",
-    "                    self.fin_source_data.loc[ self.fin_source_data[\"지번\"]== i , \"도로명\" ] = res_json['documents'][0]['road_address']['address_name']\r\n",
-    "                    for j,k in x_y.items():\r\n",
-    "                            self.fin_source_data.loc[ self.fin_source_data[\"지번\"]== i , j ] = res_json['documents'][0]['address'][k]\r\n",
-    "                        \r\n",
+    "            res_json = res.json() \r\n",
     "                \r\n",
-    "                #addr = res_json['documents'][0]['road_address']['address_name']\r\n",
-    "                name = self.fin_source_data.loc[ self.fin_source_data[\"도로명\"]== i, \"병원명\" ].unique()[0]\r\n",
-    "                #print(\"point 12 comp\")\r\n",
-    "                count += 1\r\n",
+    "            print(res_json)\r\n",
+    "            print(i)\r\n",
+    "            \r\n",
+    "            try:\r\n",
+    "                #if sw:\r\n",
+    "                fin_source_data.loc[ u, \"도로명\" ] = res_json['documents'][0]['road_address']['address_name']\r\n",
+    "                for j,k in x_y.items():\r\n",
+    "                    fin_source_data.loc[ u , j ] = res_json['documents'][0]['address'][k]\r\n",
+    "\r\n",
+    "                addr = res_json['documents'][0]['road_address']['address_name']\r\n",
+    "                name = fin_source_data.loc[ fin_source_data[\"도로명\"]== i, \"병원명\" ].unique()[0]\r\n",
+    "            \r\n",
     "            except IndexError:\r\n",
     "                try:\r\n",
-    "\r\n",
-    "                    i2 = i.split()\r\n",
-    "                    i2 = ' '.join(i2[:4])\r\n",
-    "                    i2 = re.sub(r'[,]','',i2)\r\n",
-    "                    query = i2\r\n",
+    "                    i = i.split()\r\n",
+    "                    i = ' '.join(i[:4])\r\n",
+    "                    i = re.sub(r'[,]','',i2)\r\n",
+    "                    query = i\r\n",
     "                    url = f\"https://dapi.kakao.com/v2/local/search/address.json?query={query}\"\r\n",
-    "                    headers={'Authorization':'KakaoAK {}'.format(self.rest_api_key)}\r\n",
+    "                    headers={'Authorization':'KakaoAK {}'.format(rest_api_key)}\r\n",
     "                    res = requests.get(url, headers=headers)\r\n",
     "                    res_json = res.json()\r\n",
     "\r\n",
-    "                    #print(f'POINT 3{i}')\r\n",
-    "                    #print(f'POINT 3.5{i2}')\r\n",
-    "                    #print(f'POINT 4{self.fin_source_data.loc[ self.fin_source_data[\"도로명\"]== i, \"도로명\" ].unique()[0]}')\r\n",
+    "                    addr = res_json['documents'][0]['road_address']['address_name']\r\n",
+    "                    name = fin_source_data.loc[ fin_source_data[\"도로명\"]== i, \"병원명\" ].unique()[0]\r\n",
     "\r\n",
-    "                    if i == self.fin_source_data.loc[ self.fin_source_data[\"도로명\"]== i, \"도로명\" ].unique()[0]:\r\n",
-    "                        for j,k in x_y.items():\r\n",
-    "                            self.fin_source_data.loc[ self.fin_source_data[\"도로명\"]== i , j ] = res_json['documents'][0]['address'][k]\r\n",
-    "                    elif  i == self.fin_source_data.loc[ self.fin_source_data[\"지번\"]== i, \"지번\" ].unique()[0]:\r\n",
-    "                        self.fin_source_data.loc[ self.fin_source_data[\"지번\"]== i , \"도로명\" ] = res_json['documents'][0]['road_address']['address_name']\r\n",
-    "                        for j,k in x_y.items():\r\n",
-    "                                self.fin_source_data.loc[ self.fin_source_data[\"지번\"]== i , j ] = res_json['documents'][0]['address'][k]\r\n",
-    "                            \r\n",
-    "                    #addr = res_json['documents'][0]['road_address']['address_name']\r\n",
-    "                    name = self.fin_source_data.loc[ self.fin_source_data[\"도로명\"]== i, \"병원명\" ].unique()[0]\r\n",
-    "                    count += 1\r\n",
+    "                    fin_source_data.loc[ u, \"도로명\" ] = res_json['documents'][0]['road_address']['address_name']\r\n",
+    "\r\n",
+    "                    for j,k in x_y.items():\r\n",
+    "                        fin_source_data.loc[ u , j ] = res_json['documents'][0]['address'][k]\r\n",
     "                except:\r\n",
-    "                    print(\"---- 오류 주소 내용----\")\r\n",
-    "                    print(i)\r\n",
     "                    exc.append(i)\r\n",
-    "        else:\r\n",
-    "            print(f'좌표 입력 횟수{count}')\r\n",
-    "            print(f'좌표 오류 횟수{len(exc)}')\r\n",
-    "            #print(f'좌표 오류 내용{exc}')\r\n",
-    "            return self.fin_source_data\r\n",
+    "                    cnt += 1\r\n",
+    "\r\n",
+    "        print(exc)\r\n",
+    "        print(cnt)\r\n",
+    "        fin_source_data2 = fin_source_data.copy()\r\n",
+    "        return fin_source_data2\r\n",
     "\r\n",
     "    def make_map(self) -> folium.map:\r\n",
     "        fin_source_data =  self.test_list2()\r\n",
@@ -273,20 +276,183 @@
    "source": [],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "import re\r\n",
+    "import requests"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "source": [
+    "import requests\r\n",
+    "import json\r\n",
+    "rest_api_key = 'c6ead90ce93e6ff182fbb5dbbb2efb6c'\r\n",
+    "query = \"충청남도 서산시 읍내동 169-6\"\r\n",
+    "#query = \"전남 영광군 영광읍 백수로 1640\"\r\n",
+    "query = '대구광역시 수성구 용학로48길 24'\r\n",
+    "url = f\"https://dapi.kakao.com/v2/local/search/address.json?query={query}\"\r\n",
+    "url\r\n",
+    "\r\n",
+    "headers={'Authorization':'KakaoAK {}'.format(rest_api_key)}\r\n",
+    "res = requests.get(url, headers=headers)\r\n",
+    "res_json = res.json()\r\n",
+    "res_json"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'documents': [{'address': {'address_name': '대구 수성구 지산동 1207-12',\n",
+       "    'b_code': '2726011200',\n",
+       "    'h_code': '2726065200',\n",
+       "    'main_address_no': '1207',\n",
+       "    'mountain_yn': 'N',\n",
+       "    'region_1depth_name': '대구',\n",
+       "    'region_2depth_name': '수성구',\n",
+       "    'region_3depth_h_name': '지산2동',\n",
+       "    'region_3depth_name': '지산동',\n",
+       "    'sub_address_no': '12',\n",
+       "    'x': '128.634897683241',\n",
+       "    'y': '35.8193411600849'},\n",
+       "   'address_name': '대구 수성구 용학로48길 24',\n",
+       "   'address_type': 'ROAD_ADDR',\n",
+       "   'road_address': {'address_name': '대구 수성구 용학로48길 24',\n",
+       "    'building_name': '',\n",
+       "    'main_building_no': '24',\n",
+       "    'region_1depth_name': '대구',\n",
+       "    'region_2depth_name': '수성구',\n",
+       "    'region_3depth_name': '지산동',\n",
+       "    'road_name': '용학로48길',\n",
+       "    'sub_building_no': '',\n",
+       "    'underground_yn': 'N',\n",
+       "    'x': '128.634897683241',\n",
+       "    'y': '35.8193411600849',\n",
+       "    'zone_no': '42221'},\n",
+       "   'x': '128.634897683241',\n",
+       "   'y': '35.8193411600849'}],\n",
+       " 'meta': {'is_end': True, 'pageable_count': 1, 'total_count': 1}}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "source": [
+    "res_json['documents'][0]['address_name']"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'충남 서산시 읍내동 169-6'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "source": [
+    "fin_source_data.loc[ fin_source_data[\"도로명\"]== i, \"병원명\" ].unique()[0]"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'fin_source_data' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-19-7d7bc1fdeb06>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfin_source_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m \u001b[0mfin_source_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"도로명\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m==\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"병원명\"\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'fin_source_data' is not defined"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "res_json"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'documents': [{'address': {'address_name': '충남 서산시 읍내동 169-6',\n",
+       "    'b_code': '4421010100',\n",
+       "    'h_code': '4421051000',\n",
+       "    'main_address_no': '169',\n",
+       "    'mountain_yn': 'N',\n",
+       "    'region_1depth_name': '충남',\n",
+       "    'region_2depth_name': '서산시',\n",
+       "    'region_3depth_h_name': '부춘동',\n",
+       "    'region_3depth_name': '읍내동',\n",
+       "    'sub_address_no': '6',\n",
+       "    'x': '126.451092444679',\n",
+       "    'y': '36.781441637412'},\n",
+       "   'address_name': '충남 서산시 읍내동 169-6',\n",
+       "   'address_type': 'REGION_ADDR',\n",
+       "   'road_address': None,\n",
+       "   'x': '126.451092444679',\n",
+       "   'y': '36.781441637412'}],\n",
+       " 'meta': {'is_end': True, 'pageable_count': 1, 'total_count': 1}}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.9.5"
+   "version": "3.9.1",
+   "mimetype": "text/x-python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "pygments_lexer": "ipython3",
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.5 64-bit ('pythonProject': conda)"
+   "display_name": "Python 3.9.1 64-bit ('base': conda)"
   },
   "interpreter": {
-   "hash": "c4394f168176e4ca4c134128cc0a74d2dbc223c6c31aa6daa1be767b25d6007d"
+   "hash": "26cbe81f990c700cacc7344ce939feb35388ff5140935024bac84d606131ac1b"
   }
  },
  "nbformat": 4,
