--- a/Project/Data Analysis/0.개인프로젝트_준비자료/0_ml.ipynb
+++ b/Project/Data Analysis/0.개인프로젝트_준비자료/0_ml.ipynb
@@ -345,13 +345,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
-       "139                6.9               3.1                5.4               2.1   \n",
-       "\n",
-       "     label  \n",
-       "139      2  "
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -390,6 +383,13 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+       "139                6.9               3.1                5.4               2.1   \n",
+       "\n",
+       "     label  \n",
+       "139      2  "
       ]
      },
      "metadata": {},
@@ -705,17 +705,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
-       "0                5.1               3.5                1.4               0.2   \n",
-       "1                4.9               3.0                1.4               0.2   \n",
-       "2                4.7               3.2                1.3               0.2   \n",
-       "\n",
-       "   label  \n",
-       "0      0  \n",
-       "1      0  \n",
-       "2      0  "
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -770,6 +759,17 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+       "0                5.1               3.5                1.4               0.2   \n",
+       "1                4.9               3.0                1.4               0.2   \n",
+       "2                4.7               3.2                1.3               0.2   \n",
+       "\n",
+       "   label  \n",
+       "0      0  \n",
+       "1      0  \n",
+       "2      0  "
       ]
      },
      "metadata": {},
@@ -1071,22 +1071,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
-       "0                  5.1               3.5                1.4               0.2\n",
-       "1                  4.9               3.0                1.4               0.2\n",
-       "2                  4.7               3.2                1.3               0.2\n",
-       "3                  4.6               3.1                1.5               0.2\n",
-       "4                  5.0               3.6                1.4               0.2\n",
-       "..                 ...               ...                ...               ...\n",
-       "145                6.7               3.0                5.2               2.3\n",
-       "146                6.3               2.5                5.0               1.9\n",
-       "147                6.5               3.0                5.2               2.0\n",
-       "148                6.2               3.4                5.4               2.3\n",
-       "149                5.9               3.0                5.1               1.8\n",
-       "\n",
-       "[150 rows x 4 columns]"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -1194,6 +1178,22 @@
        "</table>\n",
        "<p>150 rows × 4 columns</p>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+       "0                  5.1               3.5                1.4               0.2\n",
+       "1                  4.9               3.0                1.4               0.2\n",
+       "2                  4.7               3.2                1.3               0.2\n",
+       "3                  4.6               3.1                1.5               0.2\n",
+       "4                  5.0               3.6                1.4               0.2\n",
+       "..                 ...               ...                ...               ...\n",
+       "145                6.7               3.0                5.2               2.3\n",
+       "146                6.3               2.5                5.0               1.9\n",
+       "147                6.5               3.0                5.2               2.0\n",
+       "148                6.2               3.4                5.4               2.3\n",
+       "149                5.9               3.0                5.1               1.8\n",
+       "\n",
+       "[150 rows x 4 columns]"
       ]
      },
      "metadata": {},
@@ -1213,35 +1213,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
-       "0                  5.1               3.5                1.4               0.2   \n",
-       "1                  4.9               3.0                1.4               0.2   \n",
-       "2                  4.7               3.2                1.3               0.2   \n",
-       "3                  4.6               3.1                1.5               0.2   \n",
-       "4                  5.0               3.6                1.4               0.2   \n",
-       "..                 ...               ...                ...               ...   \n",
-       "145                6.7               3.0                5.2               2.3   \n",
-       "146                6.3               2.5                5.0               1.9   \n",
-       "147                6.5               3.0                5.2               2.0   \n",
-       "148                6.2               3.4                5.4               2.3   \n",
-       "149                5.9               3.0                5.1               1.8   \n",
-       "\n",
-       "     label  \n",
-       "0        0  \n",
-       "1        0  \n",
-       "2        0  \n",
-       "3        0  \n",
-       "4        0  \n",
-       "..     ...  \n",
-       "145      2  \n",
-       "146      2  \n",
-       "147      2  \n",
-       "148      2  \n",
-       "149      2  \n",
-       "\n",
-       "[150 rows x 5 columns]"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -1361,6 +1332,35 @@
        "</table>\n",
        "<p>150 rows × 5 columns</p>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+       "0                  5.1               3.5                1.4               0.2   \n",
+       "1                  4.9               3.0                1.4               0.2   \n",
+       "2                  4.7               3.2                1.3               0.2   \n",
+       "3                  4.6               3.1                1.5               0.2   \n",
+       "4                  5.0               3.6                1.4               0.2   \n",
+       "..                 ...               ...                ...               ...   \n",
+       "145                6.7               3.0                5.2               2.3   \n",
+       "146                6.3               2.5                5.0               1.9   \n",
+       "147                6.5               3.0                5.2               2.0   \n",
+       "148                6.2               3.4                5.4               2.3   \n",
+       "149                5.9               3.0                5.1               1.8   \n",
+       "\n",
+       "     label  \n",
+       "0        0  \n",
+       "1        0  \n",
+       "2        0  \n",
+       "3        0  \n",
+       "4        0  \n",
+       "..     ...  \n",
+       "145      2  \n",
+       "146      2  \n",
+       "147      2  \n",
+       "148      2  \n",
+       "149      2  \n",
+       "\n",
+       "[150 rows x 5 columns]"
       ]
      },
      "metadata": {},
@@ -1713,23 +1713,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "                                     params  mean_test_score  rank_test_score  \\\n",
-       "0  {'max_depth': 1, 'min_samples_split': 2}         0.700000                5   \n",
-       "1  {'max_depth': 1, 'min_samples_split': 3}         0.700000                5   \n",
-       "2  {'max_depth': 2, 'min_samples_split': 2}         0.958333                3   \n",
-       "3  {'max_depth': 2, 'min_samples_split': 3}         0.958333                3   \n",
-       "4  {'max_depth': 3, 'min_samples_split': 2}         0.975000                1   \n",
-       "5  {'max_depth': 3, 'min_samples_split': 3}         0.975000                1   \n",
-       "\n",
-       "   split0_test_score  split1_test_score  split2_test_score  \n",
-       "0              0.700                0.7               0.70  \n",
-       "1              0.700                0.7               0.70  \n",
-       "2              0.925                1.0               0.95  \n",
-       "3              0.925                1.0               0.95  \n",
-       "4              0.975                1.0               0.95  \n",
-       "5              0.975                1.0               0.95  "
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -1815,6 +1798,23 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "                                     params  mean_test_score  rank_test_score  \\\n",
+       "0  {'max_depth': 1, 'min_samples_split': 2}         0.700000                5   \n",
+       "1  {'max_depth': 1, 'min_samples_split': 3}         0.700000                5   \n",
+       "2  {'max_depth': 2, 'min_samples_split': 2}         0.958333                3   \n",
+       "3  {'max_depth': 2, 'min_samples_split': 3}         0.958333                3   \n",
+       "4  {'max_depth': 3, 'min_samples_split': 2}         0.975000                1   \n",
+       "5  {'max_depth': 3, 'min_samples_split': 3}         0.975000                1   \n",
+       "\n",
+       "   split0_test_score  split1_test_score  split2_test_score  \n",
+       "0              0.700                0.7               0.70  \n",
+       "1              0.700                0.7               0.70  \n",
+       "2              0.925                1.0               0.95  \n",
+       "3              0.925                1.0               0.95  \n",
+       "4              0.975                1.0               0.95  \n",
+       "5              0.975                1.0               0.95  "
       ]
      },
      "metadata": {},
@@ -2072,17 +2072,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "    item\n",
-       "0     TV\n",
-       "1    냉장고\n",
-       "2  전자레인지\n",
-       "3    컴퓨터\n",
-       "4    선풍기\n",
-       "5    선풍기\n",
-       "6     믹서\n",
-       "7     믹서"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -2141,6 +2130,17 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "    item\n",
+       "0     TV\n",
+       "1    냉장고\n",
+       "2  전자레인지\n",
+       "3    컴퓨터\n",
+       "4    선풍기\n",
+       "5    선풍기\n",
+       "6     믹서\n",
+       "7     믹서"
       ]
      },
      "metadata": {},
@@ -2159,17 +2159,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "   item_TV  item_냉장고  item_믹서  item_선풍기  item_전자레인지  item_컴퓨터\n",
-       "0        1         0        0         0           0         0\n",
-       "1        0         1        0         0           0         0\n",
-       "2        0         0        0         0           1         0\n",
-       "3        0         0        0         0           0         1\n",
-       "4        0         0        0         1           0         0\n",
-       "5        0         0        0         1           0         0\n",
-       "6        0         0        1         0           0         0\n",
-       "7        0         0        1         0           0         0"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -2273,6 +2262,17 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "   item_TV  item_냉장고  item_믹서  item_선풍기  item_전자레인지  item_컴퓨터\n",
+       "0        1         0        0         0           0         0\n",
+       "1        0         1        0         0           0         0\n",
+       "2        0         0        0         0           1         0\n",
+       "3        0         0        0         0           0         1\n",
+       "4        0         0        0         1           0         0\n",
+       "5        0         0        0         1           0         0\n",
+       "6        0         0        1         0           0         0\n",
+       "7        0         0        1         0           0         0"
       ]
      },
      "metadata": {},
@@ -2294,11 +2294,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "    sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
-       "57                4.9               2.4                3.3               1.0\n",
-       "37                4.9               3.6                1.4               0.1"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -2342,6 +2337,11 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "    sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+       "57                4.9               2.4                3.3               1.0\n",
+       "37                4.9               3.6                1.4               0.1"
       ]
      },
      "metadata": {},
@@ -2445,22 +2445,6 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
-       "0             0.222222          0.625000           0.067797          0.041667\n",
-       "1             0.166667          0.416667           0.067797          0.041667\n",
-       "2             0.111111          0.500000           0.050847          0.041667\n",
-       "3             0.083333          0.458333           0.084746          0.041667\n",
-       "4             0.194444          0.666667           0.067797          0.041667\n",
-       "..                 ...               ...                ...               ...\n",
-       "145           0.666667          0.416667           0.711864          0.916667\n",
-       "146           0.555556          0.208333           0.677966          0.750000\n",
-       "147           0.611111          0.416667           0.711864          0.791667\n",
-       "148           0.527778          0.583333           0.745763          0.916667\n",
-       "149           0.444444          0.416667           0.694915          0.708333\n",
-       "\n",
-       "[150 rows x 4 columns]"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -2568,6 +2552,22 @@
        "</table>\n",
        "<p>150 rows × 4 columns</p>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+       "0             0.222222          0.625000           0.067797          0.041667\n",
+       "1             0.166667          0.416667           0.067797          0.041667\n",
+       "2             0.111111          0.500000           0.050847          0.041667\n",
+       "3             0.083333          0.458333           0.084746          0.041667\n",
+       "4             0.194444          0.666667           0.067797          0.041667\n",
+       "..                 ...               ...                ...               ...\n",
+       "145           0.666667          0.416667           0.711864          0.916667\n",
+       "146           0.555556          0.208333           0.677966          0.750000\n",
+       "147           0.611111          0.416667           0.711864          0.791667\n",
+       "148           0.527778          0.583333           0.745763          0.916667\n",
+       "149           0.444444          0.416667           0.694915          0.708333\n",
+       "\n",
+       "[150 rows x 4 columns]"
       ]
      },
      "metadata": {},
@@ -2651,18 +2651,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "source": [
-    "%tensorflow_version 1.7\r\n",
+    "# %tensorflow_version 1.7\r\n",
     "import tensorflow as tf\r\n",
     "tf.__version__"
    ],
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "UsageError: Line magic function `%tensorflow_version` not found.\n"
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-42d7b31985dd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# %tensorflow_version 1.7\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__version__\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
      ]
     }
    ],
@@ -2675,7 +2679,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
+   "source": [
+    "import pandas as pd\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_12624/3063444854.py, line 2)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\ad\\AppData\\Local\\Temp/ipykernel_12624/3063444854.py\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    try:??\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "source": [
     "import sys \r\n",
     "!{sys.executable} -m pip install tensorflow==1.15.0"
@@ -2704,7 +2726,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.9.1",
+   "version": "3.9.5",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -2716,10 +2738,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.1 64-bit ('base': conda)"
+   "display_name": "Python 3.9.5 64-bit ('pythonProject': conda)"
   },
   "interpreter": {
-   "hash": "26cbe81f990c700cacc7344ce939feb35388ff5140935024bac84d606131ac1b"
+   "hash": "c4394f168176e4ca4c134128cc0a74d2dbc223c6c31aa6daa1be767b25d6007d"
   }
  },
  "nbformat": 4,
