--- a/Project/Data Analysis/0.개인프로젝트_준비자료/0_OpenCV.ipynb
+++ b/Project/Data Analysis/0.개인프로젝트_준비자료/0_OpenCV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "source": [
     "import numpy as np\r\n",
     "import cv2\r\n",
@@ -11,9 +11,55 @@
     "image[:] = 200\r\n",
     "\r\n",
     "title1, title2 = 'Position1', 'Position2'\r\n",
-    "cv2.nameWindow"
+    "cv2.namedWindow(title1, cv2.WINDOW_AUTOSIZE)\r\n",
+    "cv2.namedWindow(title2)\r\n",
+    "cv2.moveWindow(title1, 150, 150)\r\n",
+    "cv2.moveWindow(title2, 400, 50)\r\n",
+    "\r\n",
+    "cv2.imshow(title1, image)\r\n",
+    "cv2.imshow(title2, image)\r\n",
+    "cv2.waitKey(0)\r\n",
+    "cv2.destroyAllWindows()\r\n"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "source": [
+    "a = 2\r\n",
+    "print(a)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "1 * 1"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
    "metadata": {}
   },
   {
@@ -28,7 +74,15 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.6.6"
+   "version": "3.6.6",
+   "mimetype": "text/x-python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "pygments_lexer": "ipython3",
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
   },
   "kernelspec": {
    "name": "python3",
